Update all index pages to reflect current data scale
- by-pr/README.md: 22,560 PR docs with field descriptions
- jeps/README.md: 395 JEP docs, 500 database, top owners
- by-contributor/README.md: 260 profiles, key report links
- distributions/README.md: date update
- contributors/orgs/README.md: date update

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>